--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE HTML>
- <html>
-     <head>
-          <meta charset="utf-8">
-          <title>Lily Fisher</title>
-    </head>
-    <body>
-          Hello, World!
-    </body>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Lily Fisher</title>
+
+    <style>
+     body {font-family:monaco; color:rgb(215,115,0);}
+     h1 {text-indent:500px; font-size:50pt;}
+     p1 {font-size:16pt;}
+     a {font-size:20pt;}
+    </style>
+</head>
+<body style="background-color:rgb(202,231,255);">
+<div style ="overflow:auto;width:1425px;height:200px;background:rgb(115,195,255);">
+    <a href="https://music.apple.com/us/playlist/favorites/pl.u-11zBP53CbY4PEZ" target="_blank" style="position:relative; top:90px; left:160px;">Favorite Songs</a>
+    <a href="https://letterboxd.com/lilyynicole/list/favorites/" target="_blank" style="position:relative; top:90px; left:800px">Favorite Movies</a>
+    <h1 style="position:relative; top:-20px">
+ Lily Fisher
+</h1>
+</div>
+<div style="position:relative; top:20px; left:400px">
+    <img src="picofme.JPG" width="300px" height="450px">
+</div>
+<div style="overflow:auto;width:300px;height:450px;background:rgb(115,195,255);position:relative;left:750px;top:-435px;">
+<p1>
+    Hi! My name is Lily Fisher and I'm a Cognitive Science major at Occidental College in Los Angeles, California.
+    My hobbies include playing guitar, teaching myself dances, and learning new languages. I hope to be fluent in
+    as many languages as possible (including the computer science languages).
+</p1>
+</div>
+</body>
 </html>
